fix(styling): auto scroll, word wrap, room code style, minify maps (#36)
* fix(styling): auto scroll, word wrap, code style

* feat(maps) : Minify all maps, remove whitespaces.

--- a/src/App.css
+++ b/src/App.css
@@ -80,3 +80,28 @@
     transform: translate(-50%, 0%);
     /* z-index: 50; */
 }
+
+.room-code-box{
+    position: absolute;
+    top: 5%;
+    left: 50%;
+    transform: translate(-50%, 0);
+    /* width: 100%; */
+    font-size: 1rem;
+    z-index: 1;
+    text-align: center;
+    color: #fff;
+    font-weight: bold;
+    /* add glass effect */
+    background: rgba(0, 0, 0, 0.5);
+    background: -moz-linear-gradient(top, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.5) 100%);
+    background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(0, 0, 0, 0.5)), color-stop(100%, rgba(0, 0, 0, 0.5)));
+    background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.5) 100%);
+    background: -o-linear-gradient(top, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.5) 100%);
+    background: -ms-linear-gradient(top, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.5) 100%);
+}
+
+.room-code{
+    color: #ffc107;
+    cursor: pointer;
+}
